<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:orientation="vertical"
             android:background="@drawable/dazzling_bg_game">
	<TextView
            android:id="@+id/tips_text"
            android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
            android:orientation="vertical"
		    android:paddingTop="35dip"
            android:paddingBottom="50dip"
		    android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:text="@string/tips_text"
		    android:textColor="#FF000000"
            android:textSize="16sp" />


    <TextView
            android:id="@+id/tips_text2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingTop="35dip"
            android:paddingBottom="50dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:text="@string/tips_text2"
            android:textColor="#FF000000"
            android:textSize="16sp"
            android:layout_marginTop="120dip"/>

    <TextView
            android:id="@+id/tips_text3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingTop="35dip"
            android:paddingBottom="50dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:text="@string/tips_text3"
            android:textColor="#FF000000"
            android:textSize="16sp"
            android:layout_marginTop="240dip"/>
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_height="95dip"
                android:layout_width="fill_parent"
                android:layout_gravity="center"
                android:layout_alignParentBottom="true">
            <Button
                    android:id="@+id/touch_to_start"
                    android:layout_width="wrap_content"
                    android:layout_height="50dip"
                    android:layout_gravity="center"
                    android:text="@string/touch_to_start"
                    android:textColor="#ff222ce5"
                    android:textSize="16dp"
                    android:background="#ffacdae5"
                    android:textAlignment="center"/>
        </LinearLayout>
    </RelativeLayout>
    </FrameLayout>