<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/register_bg"
                android:orientation="vertical">

    <RelativeLayout
            android:id="@+id/top"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="@color/deepskyblue"
            android:layout_marginTop="2dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_title"
                android:textColor="@android:color/white"
                android:textSize="25.0dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    /**
    确定与取消按钮
    */
    <LinearLayout
            android:id="@+id/bottom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

        <Button
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip"
                android:background="@drawable/long_button_selector"
                android:text="@string/sure"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

        <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5.0dip"
                android:background="@drawable/long_button_selector"
                android:text="@string/cancel"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>
    </LinearLayout>


    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/bottom"
            android:layout_below="@id/top"
            android:scrollbars="none">

        <!--用户名-->
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

            <RelativeLayout
                    android:id="@+id/row1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:padding="5.0dip"
                    android:layout_marginTop="100dp">

                <TextView
                        android:id="@+id/userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10.0dip"
                        android:text="@string/username"
                        android:textColor="@color/black"
                        android:textSize="14.0sp"/>

                <EditText
                        android:id="@+id/input_userid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5.0dip"
                        android:layout_marginRight="3.0dip"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null"
                        android:layout_toRightOf="@id/userName"
                        android:background="@drawable/input2_bg"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:maxLines="1"
                        />
            </RelativeLayout>

            <!--密码-->
            <RelativeLayout
                    android:id="@+id/row2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/row1"
                    android:padding="5.0dip"
                    android:layout_marginTop="5dp">

                <TextView
                        android:id="@+id/pwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10.0dip"
                        android:layout_marginRight="3.0dip"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:textSize="14.0sp"/>

                <EditText
                        android:id="@+id/input_pwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5.0dip"
                        android:layout_marginRight="3.0dip"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null"
                        android:layout_toRightOf="@id/pwd"
                        android:background="@drawable/input2_bg"
                        android:inputType="textPassword"
                        android:password="true"
                        android:padding="5.0dp"
                        android:maxLines="1"
                        />
            </RelativeLayout>
            <!--重新输入密码-->
            <RelativeLayout
                    android:id="@+id/row3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/row2"
                    android:padding="5.0dip"
                    android:layout_marginTop="5dp">

                <TextView
                        android:id="@+id/repwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10.0dip"
                        android:layout_marginRight="3.0dip"
                        android:text="@string/repassword"
                        android:textColor="@color/black"
                        android:textSize="14.0sp"/>

                <EditText
                        android:id="@+id/input_repwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5.0dip"
                        android:layout_marginRight="3.0dip"
                        android:layout_toRightOf="@id/repwd"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null"
                        android:background="@drawable/input2_bg"
                        android:padding="5.0dip"
                        android:password="true"
                        android:maxLines="1"
                        />
            </RelativeLayout>

            <!--昵称-->
            <RelativeLayout
                    android:id="@+id/row4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/row3"
                    android:padding="5.0dip"
                    android:layout_marginTop="5dp">

                <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10.0dip"
                        android:layout_marginRight="3.0dip"
                        android:text="@string/nickname"
                        android:textColor="@color/black"
                        android:textSize="14.0sp"/>

                <EditText
                        android:id="@+id/input_nickname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5.0dip"
                        android:layout_marginRight="3.0dip"
                        android:layout_toRightOf="@id/name"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null"
                        android:background="@drawable/input2_bg"
                        android:padding="5.0dip"
                        android:maxLines="1"
                        />
            </RelativeLayout>
            <!--邮箱-->
            <RelativeLayout
                    android:id="@+id/row5"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/row4"
                    android:padding="5.0dip"
                    android:layout_marginTop="5dp">

                <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10.0dip"
                        android:layout_marginRight="3.0dip"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="14.0sp"/>

                <EditText
                        android:id="@+id/input_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5.0dip"
                        android:layout_marginRight="3.0dip"
                        android:layout_toRightOf="@id/email"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null"
                        android:background="@drawable/input2_bg"
                        android:padding="5.0dip"
                        android:maxLines="1"
                        />
            </RelativeLayout>
            /**
            性别选择
            */
            <RelativeLayout android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/row6"
                            android:layout_below="@+id/row5"
                            android:padding="5.0dip"
                            android:layout_marginTop="5dp">

                <TextView
                        android:id="@+id/sex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10.0dip"
                        android:layout_marginRight="3.0dip"
                        android:text="@string/sex"
                        android:textColor="@color/black"
                        android:textSize="14.0sp"/>

                <RadioGroup
                        android:id="@+id/radioSex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:orientation="horizontal"
                        android:layout_marginLeft="5.0dip"
                        android:layout_marginRight="15.0dip"
                        android:layout_toRightOf="@id/sex"
                        android:padding="5dp">

                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/male"
                            android:text="@string/male"
                            android:textColor="@color/black"

                    />
                    <RadioButton android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:id="@+id/female"
                                 android:text="@string/female"
                                 android:textColor="@color/black"/>
                </RadioGroup>
            </RelativeLayout>

            /**
            *头像
            */
            <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_alignParentTop="true" android:layout_centerHorizontal="true">

                <ImageView
                        android:id="@+id/hendView"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/profile"
                        />
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                        />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>